--- a/app/page.css
+++ b/app/page.css
@@ -9,7 +9,17 @@ body {
   margin-bottom: 10px;
   text-align: center;
 }
+.feedback {
+  font-weight: bold;
+}
 
+.feedback.correto {
+  color: green;
+}
+
+.feedback.errado {
+  color: red;
+}
 .container {
   display: flex;
   height: 100vh;
@@ -87,7 +97,17 @@ input {
   font-size: 16px;
   margin-top: 10px;
 }
-
+.btn-prof {
+  background: #e093e0;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
 .registro-link {
   margin-top: 15px;
   font-size: 14px;
