--- a/app/treinamento/[id]/treinamento.module.css
+++ b/app/treinamento/[id]/treinamento.module.css
@@ -7,12 +7,12 @@
   font-display: swap;
 }
 
-body {
+/*body {
   background-image: linear-gradient(to bottom right, #25a4d7, #80b8d8);
   background-attachment: fixed;
   overflow-y: scroll;
   overflow-x: hidden;
-}
+}*/
 
 .feedback {
   font-weight: bold;
@@ -26,13 +26,13 @@ body {
   color: red;
 }
 
-h1 {
+/*h1 {
   font-family: "Cherry Bomb One", system-ui;
   font-size: 200px;
   color: #f1df26;
   -webkit-text-stroke: 5px #aea11e;
   margin-bottom: 30px;
-}
+}*/
 
 .numero {
   font-family: "Cherry Bomb One", system-ui;
@@ -96,12 +96,12 @@ h1 {
   -webkit-text-stroke: 3px #aea11e;
 }
 
-h2 {
+/*h2 {
   font-size: 65px;
   -webkit-text-stroke: 1px #aea11e;
   font-family: "Cherry Bomb One", system-ui;
   color: #f1df26;
-}
+}*/
 
 #centro_menu h3 {
   margin-top: -110px;
@@ -178,7 +178,40 @@ h2 {
   to { transform: translateX(500%); }
 }
 
-#centro input[type=text] {
+
+.box_correcao{
+    background: rgba(255, 255, 255, 0.7);
+    border: 2px grey solid;
+    width: 750px;
+    border-radius: 15px;
+    font-family: Arial;
+    padding: 15px;
+    text-align: left;
+    margin-bottom: 10px;
+    margin: auto auto 10px auto;
+}
+
+.box_correcao label {
+    display: block;
+    margin-top: 15px;
+    font-weight: bold;
+}
+
+.box_correcao input[type="text"],
+.box_correcao input[type="datetime-local"],
+.box_correcao textarea {
+    font-family: Arial, Helvetica, sans-serif;
+    display: block;
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 14px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+/*.box_correcao input[type=text] {
   width: 250px;
   height: 170px;
   font-family: "Cherry Bomb One", system-ui;
@@ -192,6 +225,26 @@ h2 {
   display: inline;
   margin: 0px 20px 0px 20px;
   padding: 5px;
+}*/
+
+.box_correcao textarea {
+    resize: vertical;
+    min-height: 60px;
+}
+
+.box_correcao button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #25a4d7;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.box_correcao button:hover {
+    background-color: #1c85b2;
 }
 
 .close {
