--- a/app/home/home.css
+++ b/app/home/home.css
@@ -144,7 +144,7 @@ h1 {
 }
 
 /* Estilos para inputs */
-input[type="text"] {
+#centro input[type="text"] {
     width: 250px;
     height: 170px;
     font-family: "Cherry Bomb One", system-ui;
@@ -161,7 +161,7 @@ input[type="text"] {
 }
 
 /* Botões de fechar e posicionamento */
-.close {
+/*.close {
     display: block;
     font-family: "Cherry Bomb One", system-ui;
     font-size: 50px;
@@ -175,7 +175,7 @@ input[type="text"] {
     text-align: center;
     position: absolute;
     padding: 150px 15px 15px 15px;
-}
+}*/
 
 .right {
     display: block;
@@ -303,6 +303,7 @@ input[type="text"] {
 .box_correcao input[type="text"],
 .box_correcao input[type="datetime-local"],
 .box_correcao textarea {
+    font-family: Arial, Helvetica, sans-serif;
     display: block;
     width: 100%;
     padding: 8px 10px;
@@ -332,6 +333,22 @@ input[type="text"] {
 .box_correcao button:hover {
     background-color: #1c85b2;
 }
+
+/*.box_correcao input[type=text] {
+  width: 250px;
+  height: 170px;
+  font-family: "Cherry Bomb One", system-ui;
+  font-size: 200px;
+  color: #f1df26;
+  -webkit-text-stroke: 10px #aea11e;
+  text-align: center;
+  background: transparent;
+  border: none;
+  border-bottom: dashed #f1df26 5px;
+  display: inline;
+  margin: 0px 20px 0px 20px;
+  padding: 5px;
+}*/
 
 
 .box_avisos, .box_treinamentos_aluno{
