--- a/app/avisos/aviso.module.css
+++ b/app/avisos/aviso.module.css
@@ -1,5 +1,3 @@
-/* --- ESTILOS GERAIS DA PÁGINA DE AVISOS --- */
-
 .centroAvisos {
   position: absolute;
   width: 90%;
@@ -11,7 +9,7 @@
   top: 0;
   bottom: 0;
   text-align: center;
-  overflow-y: auto; /* Permite rolagem se o conteúdo for grande */
+  overflow-y: auto; 
   padding-top: 20px;
 }
 
@@ -40,7 +38,6 @@
   margin: 0 0 10px 0;
 }
 
-/* --- ESTILOS PARA O FORMULÁRIO DE NOVO AVISO --- */
 
 .formNovoAviso {
   display: flex;
