--- a/app/page.css
+++ b/app/page.css
@@ -36,11 +36,11 @@ body {
 
 .logo-group {
   display: flex;
-  flex-direction: row; /* de coluna para linha */
+  flex-direction: row; 
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  gap: 15px; /* espaçamento entre os itens */
+  gap: 15px;
 }
 
 .text-group {
